# N-LINE

./: .gitignore  CHANGELOG.md  Makefile  README.md  README_BUILD.md  README_EN.md  README_INSTALLER.md  hook-customtkinter.py  installer.iss  main.py  make.bat  n-line-onedir.spec  n-line.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  test_style.qss
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  SECURITY.md  pull_request_template.md  release_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-check.yml  release.yml
core/: automation_manager.py  debug_tools.py  line_manager.py  ui_inspector.py  window_manipulator.py
docs/: CONTRIBUTING.md  DEVELOPMENT.md  INSTALLER.md  README.md  RELEASE.md  TROUBLESHOOTING.md  TROUBLESHOOTING_INSTALLER.md  UPDATER.md  features.md  specifications.md  usage.md
docs/api/: README.md
docs/core/: automation.md  debug_tools.md  line_manager.md  ui_inspector.md  window_manipulator.md
docs/en/: CONTRIBUTING.md  DEVELOPMENT.md  INSTALLER.md  README.md  RELEASE.md  TROUBLESHOOTING.md  TROUBLESHOOTING_INSTALLER.md  UPDATER.md  features.md  specifications.md  usage.md
docs/en/api/: README.md
docs/en/core/: automation.md  debug_tools.md  line_manager.md  ui_inspector.md  window_manipulator.md
docs/en/features/: automation.md  core_functions.md  qss_injection.md  window_mods.md
docs/features/: automation.md  core_functions.md  qss_injection.md  window_mods.md
gui/: app.py  debug_window.py
scripts/: README.md  build_installer.py  bump_version.py  check_changelog.py  check_version.py  generate_changelog.py  test_build.py
src/n_line/: __init__.py  __main__.py
src/n_line/core/: automation_manager.py  debug_tools.py  line_manager.py  ui_inspector.py  updater.py  version_manager.py  window_manipulator.py
src/n_line/gui/: app.py  debug_window.py
src/n_line/gui/tabs/: automation_tab.py  files_tab.py  inspector_tab.py  mods_tab.py  process_tab.py  qss_tab.py
