[project]
name = "n-line"
version = "0.2.0"
description = "LINEデスクトップアプリケーションの管理、デバッグ、変更を行うPythonユーティリティ"
authors = [
    { name = "nezumi0627" }
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }
keywords = ["line", "automation", "ui-inspector", "windows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "customtkinter>=5.2.2",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pywin32>=311",
    "uiautomation>=2.0.29",
    "keyboard>=0.13.5",
    "mouse>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
n-line = "n_line.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
]

[tool.rye.scripts]
start = { cmd = "python -m n_line" }
fmt = { cmd = "ruff format ." }
check = { cmd = "ruff check . --fix" }
lint = { cmd = "ruff check ." }
type-check = { cmd = "mypy src/n_line" }
test = { cmd = "pytest" }

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # line too long

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
